# proto_daq

./: README.md  setup.cfg
src/prototype_DAQ/: adapter.py  base_proxy.py  controller.py  dummy.py  newDummy.py  proxy.py
test/config/: protoDAQ.cfg  proxy.cfg
