[metadata]
name = prototype_DAQ
description = IAC Adapter for communication with BabyD Subsystems
url = https://github.com/JoshHarris2108/proto_daq
author = Josh Harris
author_email = josh.harris@stfc.ac.uk
license = Apache License 2.0
long_description = file: README
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
